# terraria

./: .gitignore  Dockerfile  build.sh  default.conf  readme.md
terraria_server/: Cargo.toml  config.json
terraria_server/src/: main.rs
terraria_server/src/infra/: conf.rs  game.rs  mod.rs  shell.rs
terraria_server/src/web/: handle.rs  middleware.rs  mod.rs  model.rs  websocket.rs
terraria_web/: index.html  package-lock.json  package.json
terraria_web/src/: App.tsx
terraria_web/src/api/: api.tsx  model.tsx  request.tsx
terraria_web/src/component/: popContent.tsx
terraria_web/src/utils/: const.tsx
